Searching, sorting and passing data from tableView to another view controller

--- a/Covid-19App/Storyboards/Statistics.storyboard
+++ b/Covid-19App/Storyboards/Statistics.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +15,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <segmentedControl key="tableFooterView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" id="i0p-d3-hXk">
+                            <rect key="frame" x="0.0" y="174" width="414" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Most Cases"/>
+                                <segment title="Least  Cases"/>
+                            </segments>
+                            <connections>
+                                <action selector="didChangeSegment:" destination="nn5-wV-OHi" eventType="valueChanged" id="JSq-bg-uzM"/>
+                            </connections>
+                        </segmentedControl>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="StatisticsTableViewCell" rowHeight="118" id="gEq-Dp-yMx" customClass="StatisticsTableViewCell" customModule="Covid_19App" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="118"/>
@@ -79,7 +91,7 @@
                                     <outlet property="fatalities" destination="YBy-oe-f70" id="dtR-yf-xdB"/>
                                     <outlet property="infected" destination="URA-N5-MOw" id="kKE-hY-lfQ"/>
                                     <outlet property="recovered" destination="HO6-rq-psd" id="UXG-k6-UzS"/>
-                                    <segue destination="kGY-ba-3UU" kind="show" id="bT7-Zk-ONZ"/>
+                                    <segue destination="a93-av-y9h" kind="show" identifier="ShowCountryDetails" id="cf1-IX-1xs"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -97,33 +109,124 @@
             <point key="canvasLocation" x="-816" y="-264"/>
         </scene>
         <!--CountryDetails-->
-        <scene sceneID="rrV-zr-yo9">
+        <scene sceneID="xyA-Q3-2th">
             <objects>
-                <tableViewController storyboardIdentifier="CountryDetails" title="CountryDetails" id="kGY-ba-3UU" customClass="CountryDetailsTableViewController" customModule="Covid_19App" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hJ4-vN-VG4">
+                <viewController title="CountryDetails" id="a93-av-y9h" customClass="CountryDetailsViewController" customModule="Covid_19App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="X86-qI-dPE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryDetailsTableViewCell" id="7OS-S0-XVA" customClass="StatisticsTableViewCell" customModule="Covid_19App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7OS-S0-XVA" id="nHg-K2-OV5">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="kGY-ba-3UU" id="bsa-Ix-YyS"/>
-                            <outlet property="delegate" destination="kGY-ba-3UU" id="mvj-cd-mLt"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="Ala-23-fOf"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1ed-wS-Vfy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="JXX-64-KbZ">
+                                <rect key="frame" x="75" y="285" width="264.5" height="166"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="6zc-ps-FC6">
+                                        <rect key="frame" x="0.0" y="0.0" width="264.5" height="26.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Critical" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IRp-lq-Zjl">
+                                                <rect key="frame" x="0.0" y="0.0" width="67" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="crValue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugq-au-iXr">
+                                                <rect key="frame" x="193.5" y="0.0" width="71" height="26.5"/>
+                                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="YfO-Ev-f46">
+                                        <rect key="frame" x="0.0" y="46.5" width="264.5" height="26.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recoverd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2NW-aj-9ef">
+                                                <rect key="frame" x="0.0" y="0.0" width="90" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rValue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGc-s9-bdv">
+                                                <rect key="frame" x="204.5" y="0.0" width="60" height="26.5"/>
+                                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="RUt-fm-0uQ">
+                                        <rect key="frame" x="0.0" y="93" width="264.5" height="26.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Deaths" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIQ-bJ-wit">
+                                                <rect key="frame" x="0.0" y="0.0" width="68.5" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dvalue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGs-y9-7pl">
+                                                <rect key="frame" x="199.5" y="0.0" width="65" height="26.5"/>
+                                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="Zri-IC-sbt">
+                                        <rect key="frame" x="0.0" y="139.5" width="264.5" height="26.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirmed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fko-PL-ebb">
+                                                <rect key="frame" x="0.0" y="0.0" width="101" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cValue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="buT-6u-TuM">
+                                                <rect key="frame" x="201" y="0.0" width="63.5" height="26.5"/>
+                                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Country" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6PW-hd-J5f">
+                                <rect key="frame" x="95" y="117" width="225" height="56"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="fvj-H5-dDo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="JXX-64-KbZ" firstAttribute="top" secondItem="p0V-SC-0eH" secondAttribute="top" constant="285" id="5j0-tn-2Ip"/>
+                            <constraint firstItem="6PW-hd-J5f" firstAttribute="leading" secondItem="p0V-SC-0eH" secondAttribute="leading" constant="95" id="6oA-Bb-UfA"/>
+                            <constraint firstItem="6PW-hd-J5f" firstAttribute="centerX" secondItem="JXX-64-KbZ" secondAttribute="centerX" id="Gmc-4Q-Ljl"/>
+                            <constraint firstItem="6PW-hd-J5f" firstAttribute="top" secondItem="p0V-SC-0eH" secondAttribute="top" constant="117" id="RF6-VN-lvi"/>
+                            <constraint firstItem="JXX-64-KbZ" firstAttribute="centerX" secondItem="X86-qI-dPE" secondAttribute="centerX" id="p6j-LS-3cB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="p0V-SC-0eH"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Sf2-IQ-12l"/>
+                    <connections>
+                        <outlet property="confirmed" destination="buT-6u-TuM" id="7f3-pP-XO8"/>
+                        <outlet property="countryName" destination="6PW-hd-J5f" id="puk-pK-Aml"/>
+                        <outlet property="critical" destination="ugq-au-iXr" id="H8f-nL-OqR"/>
+                        <outlet property="deaths" destination="hGs-y9-7pl" id="b6n-jb-Qmu"/>
+                        <outlet property="recovered" destination="MGc-s9-bdv" id="j5k-Ta-8ZJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iPv-zd-ny2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="59" y="-265"/>
+            <point key="canvasLocation" x="305.79710144927537" y="-264.50892857142856"/>
         </scene>
     </scenes>
     <resources>
